--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,7 +2,7 @@
 isSinglePage = true
 
 # Meta Config
-description = "Hello"
+description = "Jun Woo Shin's site"
 
 # Header Configuration
 avatar = "img/profile-picture.jpg"
@@ -11,20 +11,20 @@ avatar = "img/profile-picture.jpg"
 disqusShortname = ""
 
 [emoji]
-enableEmoji = true
+	enableEmoji = true
 
- # giscus is a comment system based on GitHub Discussions. see https://giscus.app
-[giscus]       
-    enable = false
-    repo = ""
-    repoId = ""
-    category = "Announcements"
-    categoryId = ""
-    # mapping = "pathname"  # comment value is the default value
-    # strict = 0
-    # reactionsEnabled = 1
-    # emitMetadata = 0
-    # inputPosition = "top"
-    # theme = "light"
-    # lang = "zh-CN"
-    # lazyLoading = true
+# giscus is a comment system based on GitHub Discussions. see https://giscus.app
+# [giscus]
+# 	enable = false
+# 	repo = ""
+# 	repoId = ""
+# 	category = "Announcements"
+# 	categoryId = ""
+# 	mapping = "pathname"  # comment value is the default value
+# 	strict = 0
+# 	reactionsEnabled = 1
+# 	emitMetadata = 0
+# 	inputPosition = "top"
+# 	theme = "light"
+# 	lang = "zh-CN"
+# 	lazyLoading = true
