--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,19 +2,19 @@ baseURL = 'http://example.org/'
 copyright = "{year}" # To make 2007 - 2022. Just add before {year} example: 2007 - {year}
 languageCode = 'en-us'
 theme = 'lowkey'
-title = 'Lowkey Hugo'
+title = 'Jun Woo Shin'
 enableRobotsTXT = true
 
 # List Config
 summaryLength= 15
-paginate = 5
+paginate = 10
 
 [markup.highlight]
-      codeFences = false
-      guessSyntax = false
-      hl_Lines = ""
-      lineNoStart = 1
-      lineNos = false
-      lineNumbersInTable = false
-      tabWidth = 4
-      noClasses = false
+	codeFences = false
+	guessSyntax = false
+	hl_Lines = ""
+	lineNoStart = 1
+	lineNos = false
+	lineNumbersInTable = false
+	tabWidth = 2
+	noClasses = false
