--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -1,50 +1,55 @@
 [[main]]
-    identifier = "home"
-    name = "Home"
-    url = "/"
-    weight = 1
+	identifier = "home"
+	name = "Home"
+	url = "/"
+	weight = 1
 
 [[main]]
-    identifier = "posts"
-    name = "Posts"
-    url = "/posts"
-    weight = 2
+	identifier = "blog"
+	name = "Blog"
+	url = "/blog"
+	weight = 2
 
 [[main]]
-    identifier = "categories"
-    name = "Categories"
-    url = "/categories"
-    weight = 3
+	identifier = "projects"
+	name = "Projects"
+	url = "/projects"
+	weight = 3
 
 [[main]]
-    identifier = "tags"
-    name = "Tags"
-    url = "/tags"
-    weight = 4
+	identifier = "photography"
+	name = "Photography"
+	url = "/photography"
+	weight = 4
 
 [[main]]
-    identifier = "donate"
-    name = "Donate"
-    url = "https://ko-fi.com/nixentric"
-    weight = 5
+	identifier = "tags"
+	name = "Tags"
+	url = "/tags"
+	weight = 5
 
+[[main]]
+	identifier = "archive"
+	name = "Archive"
+	url = "/archive"
+	weight = 6
 
 # Social Media Configuration
 
 [[social]]
-    identifier = "twitter"
-    name = "Twitter"
-    url = "#"
-    weight = 1
+	identifier = "email"
+	name = "Email"
+	url = "mailto:hello@jwoos.com"
+	weight = 1
 
 [[social]]
-    identifier = "instagram"
-    name = "Instagram"
-    url = "#"
-    weight = 2
+	identifier = "instagram"
+	name = "Instagram"
+	url = "https://www.instagram.com/shin.junwoo/"
+	weight = 2
 
 [[social]]
-    identifier = "github"
-    name = "GitHub"
-    url = "#"
-    weight = 3
+	identifier = "github"
+	name = "GitHub"
+	url = "https://github.com/jwoos"
+	weight = 3
