--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,9 @@ baseURL = 'https://jwoos.com/'
 languageCode = 'en-us'
 title = 'Jun Woo Shin'
 theme = 'lowkey'
+
+[taxonomies]
+  category = 'categories'
+  tag = 'tags'
+	archive = 'archive'
+
